# Chottu-AI-Assistant

./: .env.example  .gitignore  App.tsx  BUILD.md  README-DESKTOP.md  README.local.md  README.md  build-standalone.js  create-ico.bat  index.css  index.html  metadata.json  package.json  tailwind.config.js  test-pc-control.ps1  types.ts  vite.config.ts
components/: Avatar.tsx  Settings.tsx  Visualizer.tsx
scripts/: start-chottu.js
server/: index.js  package.json  setup.js  setup.sql
server/integrations/: gmail.js  linkedin.js  system.js
server/middleware/: auth.js
server/routes/: pairing.js  pc-control.js
server/services/: local-agent.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  lib.rs  main-simple.rs  main.rs
src/components/: DesktopSettings.tsx
