[package]
name = "chottu-desktop"
version = "0.1.0"
description = "Chottu AI Assistant Desktop App"
authors = ["Chottu Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "global-shortcut-all", "dialog-open", "fs-create-dir", "fs-read-file", "shell-open", "dialog-save", "fs-write-file", "system-tray", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
keyring = "2.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
